--- a/logica_programação/imc + front/index.html
+++ b/logica_programação/imc + front/index.html
@@ -15,8 +15,7 @@
     <h1>Calcule seu IMC</h1>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-      Repellendus nisi explicabo saepe voluptatibus consequuntur et corporis
-      ma
+      Repellendus nisi explicabo saepe voluptatibus consequuntur et
     </p>
     <form action="/" id="formulario" method="POST">
       <label for="peso">Peso</label>
